--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "dependencies": {},
   "repository": {},
   "devDependencies": {
+    "connect-modrewrite": "^0.8.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
+    "grunt-build-config": "^0.1.4",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.0",
