--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "connect-modrewrite": "^0.8.1",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^2.0.0",
+    "grunt-aws-s3": "^0.13.1",
     "grunt-build-config": "^0.1.4",
+    "grunt-build-control": "^0.5.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.0",
